# aetna_coding_challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MCP_INSTALLATION_GUIDE.md  Makefile  README.md  docker-compose.yml  example.ollama.env  example.openai.env  main.py  pyproject.toml  pytest.ini
docs/: API_KEY_TEST_FIXES.md  CHAT_ENHANCEMENTS.md  FINAL_TEST_SUMMARY.md  MCP_TOOLS.md  PUSH_SUMMARY.md  README_IMPLEMENTATION_GUIDE.md  SOLUTION.md  SOLUTION_README.md  TASK1_ENRICHMENT.md  TASK2_COMPLETE.md  TASK3_MCP_CHAT.md  TESTS_FIXED_SUMMARY.md
scripts/: debug_fast_recommend.py  demo_chat.sh  run_tests.sh  test_all_requirements.sh  test_chat.py  test_chat_quick.py  validate_mcp_setup.py
src/: chat_agent.py  cli.py  db.py  embeddings.py  enricher.py  enricher_db.py  hybrid_recommender.py  mcp_server.py  recommender.py
tests/: test_db.py  test_enrichment.py  test_mcp_server.py  test_recommender.py
